# models/Tickets.go
@@ -13,3 +13,10 @@ type Ticket_Purchase struct {
 	Quantity int    `json:"quantity"`
 	UserID   string `json:"user_id"`
 }
+
+// swagger:model
+type TicketCreate struct {
+	Name       string `gorm:"not null" json:"name"`
+	Desc       string `gorm:"not null" json:"desc"`
+	Allocation int    `gorm:"not null" json:"allocation"`
+}
